default/piwigo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: piwigo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - t.desertbluffs.com
  rules:
  - host: t.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: piwigo
          servicePort: piwigo
