default/piwigo/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: piwigo
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: piwigo
  ingress:
  - ports:
    - port: 80
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
